# KTB4-whale-AI

./: .env  .gitignore  README.md  pyproject.toml
00_TIL/: README.md  evaluate.py  main.py  preprocess.py  train.py
00_TIL/00_SLP_single/: main.py
00_TIL/01_SLP/: preprocess.py  train_perceptron.py
01_Week_Weekly_Challange/: README.md  RETROSPECTIVE.md
01_Weekly_Challange/: README.md  pyproject.toml
01_Weekly_Challange/afo/: cli.py
01_Weekly_Challenge/: README.md  RETROSPECTIVE.md
02_Weekly_Challange/: ORGANIZING_HTTP.md  README.md  RETROSPECTIVE.md  main.py
02_Weekly_Challange/app/: database.py  main.py
02_Weekly_Challenge/: .gitignore  README.md  RETROSPECTIVE.md  dummy.json
03_Weekly_Challenge/: 01_NumPy_Quests.ipynb  02_Pandas_Quests.ipynb  03_Matplotlib_Quests.ipynb  04_Collect_Dataset.ipynb  05_Qiskit_Quests.ipynb  README.md  RETROSPECTIVE.md
04_Weekly_Challenge/: .gitignore  README.md  RETROSPECTIVE.md  weekly_challenge.ipynb
05_Weekly_Challenge/: README.md  RETROSPECTIVE.md
05_Weekly_Challenge/01_ResNet/: 02_Restrospective.ipynb
05_Weekly_Challenge/01_VGG16/: 01_Challenge.ipynb
05_Weekly_Challenge/02_ResNet/: 01_Challenge.ipynb  02_Restrospective.ipynb
05_Weekly_Challenge/03_ResNet_VGG16_Comparison/: 02_Restrospective.ipynb
05_Weekly_Challenge/04_Hyperparameter_Tuning/: 01_Challenge_GridSearch.ipynb  02_Challenge_RandomSearch.ipynb  03_Restrospective.ipynb
05_Weekly_Challenge/05_Chat_Bot/: 02_RESTROSPECTIVE.md  (+16 more)
06_Weekly_Challenge/: README.md  RETROSPECTIVE.md
07_Weekly_Challenge/: README.md  RETROSPECTIVE.md
afo/: cli.py
(+85 files in other folders)
