[project]
name = "auto-file-organizer"
version = "0.1.0"
description = "Downloads 폴더를 자동으로 정리해주는 CLI 도구"
authors = [{ name = "Whale" }]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
]
[project.scripts]
afo = "afo.cli:app"
[tool.setuptools.packages.find]
include = ["afo*"]